{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 251,
  "lineage": "e4e6753b-558d-df8b-9f2d-7c9a153ce17c",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:security-group/sg-05bfc546e1c8533d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bfc546e1c8533d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "k8s-kxc-master-sg",
            "name_prefix": "",
            "owner_id": "739275453962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-kxc-master-sg"
            },
            "tags_all": {
              "Name": "k8s-kxc-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3249629826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05bfc546e1c8533d2",
            "security_group_rule_id": "sgr-0ac8ef411a738aa3a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_iep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065742848022c2c0a",
            "arn": "arn:aws:ec2:us-east-1:739275453962:elastic-ip/eipalloc-065742848022c2c0a",
            "association_id": "eipassoc-09d88902d8ffed515",
            "domain": "vpc",
            "id": "eipalloc-065742848022c2c0a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-063fdeec4ba187416",
            "private_dns": "ip-10-0-13-204.ec2.internal",
            "private_ip": "10.0.13.204",
            "public_dns": "ec2-100-24-212-165.compute-1.amazonaws.com",
            "public_ip": "100.24.212.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-kxc-eip"
            },
            "tags_all": {
              "Name": "k8s-kxc-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:internet-gateway/igw-030f6f9bbb7503d65",
            "id": "igw-030f6f9bbb7503d65",
            "owner_id": "739275453962",
            "tags": {
              "Name": "k8s-kxc-internet-gateway"
            },
            "tags_all": {
              "Name": "k8s-kxc-internet-gateway"
            },
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065742848022c2c0a",
            "association_id": "eipassoc-09d88902d8ffed515",
            "connectivity_type": "public",
            "id": "nat-049494c616fe498f6",
            "network_interface_id": "eni-063fdeec4ba187416",
            "private_ip": "10.0.13.204",
            "public_ip": "100.24.212.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f1388745428d753f",
            "tags": {
              "Name": "k8s-kxc-nat-gateway"
            },
            "tags_all": {
              "Name": "k8s-kxc-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03184ef3b1cce77fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-049494c616fe498f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03184ef3b1cce77fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-030f6f9bbb7503d65",
            "id": "r-rtb-0a83ed5410f59805a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a83ed5410f59805a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:route-table/rtb-0a83ed5410f59805a",
            "id": "rtb-0a83ed5410f59805a",
            "owner_id": "739275453962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030f6f9bbb7503d65",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-kxc-public-route"
            },
            "tags_all": {
              "Name": "k8s-kxc-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:route-table/rtb-03184ef3b1cce77fa",
            "id": "rtb-03184ef3b1cce77fa",
            "owner_id": "739275453962",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049494c616fe498f6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-kxc-private-route"
            },
            "tags_all": {
              "Name": "k8s-kxc-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f94330b33b3c599",
            "route_table_id": "rtb-03184ef3b1cce77fa",
            "subnet_id": "subnet-0ed31a2f0c52b55c4"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0716beb604481d060",
            "route_table_id": "rtb-03184ef3b1cce77fa",
            "subnet_id": "subnet-0577bd0ee2ded549b"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef2dc473605371d4",
            "route_table_id": "rtb-0a83ed5410f59805a",
            "subnet_id": "subnet-0f1388745428d753f"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0768926a4f3c8e0",
            "route_table_id": "rtb-0a83ed5410f59805a",
            "subnet_id": "subnet-09ff335dffc46341e"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:subnet/subnet-0ed31a2f0c52b55c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed31a2f0c52b55c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275453962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-kxc-private-1a",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "tags_all": {
              "Name": "k8s-kxc-private-1a",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:subnet/subnet-0577bd0ee2ded549b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0577bd0ee2ded549b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275453962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-kxc-private-1c",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "tags_all": {
              "Name": "k8s-kxc-private-1c",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:subnet/subnet-0f1388745428d753f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1388745428d753f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275453962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-kxc-public-1a",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "tags_all": {
              "Name": "k8s-kxc-public-1a",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:subnet/subnet-09ff335dffc46341e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ff335dffc46341e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275453962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-kxc-public-1c",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "tags_all": {
              "Name": "k8s-kxc-public-1c",
              "kubernetes.io/cluster/k8s-kxc": "shared"
            },
            "vpc_id": "vpc-0be6db66c40bc9bec"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275453962:vpc/vpc-0be6db66c40bc9bec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e74a2d9af04eec87",
            "default_route_table_id": "rtb-031798565aed4235a",
            "default_security_group_id": "sg-0be79ed75a7fffc74",
            "dhcp_options_id": "dopt-0c1de3b96f97819be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be6db66c40bc9bec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031798565aed4235a",
            "owner_id": "739275453962",
            "tags": {
              "Name": "k8s-kxc-vpc"
            },
            "tags_all": {
              "Name": "k8s-kxc-vpc"
            }
          }
        }
      ]
    }
  ]
}